tests/compError/unclosedOperator.iota
// compError
// error: nothing on right side of operator
// line:5 -> here

1 + 